--- a/src/components/ItemListContainer/ItemList/ItemList.css
+++ b/src/components/ItemListContainer/ItemList/ItemList.css
@@ -1,5 +1,10 @@
-
 .itemsList {
-    display:flex;
-    flex-direction:row;
+    flex-direction: row;
+    display: flex; 
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+    margin: 40px;
+    margin-left: 5%;
+    text-align: center;
+    flex-wrap: wrap;
 }
