--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,6 +1,6 @@
 .contador {
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
     justify-content:center;
     align-items:center;
     font-size:20px;
@@ -11,7 +11,7 @@
     margin:20px;
     justify-content:center;
     padding:5px;
-    height:60px;
+    height:40px;
 }
 .numeroContador {
     font-size:20px;
