--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -2,5 +2,9 @@
     display: flex;
     flex-direction:row;
     margin-top: 30px;
-    color:grey;
+    color:white;
+    border-radius: 2px;
+    width: 100%;
+    min-width: 400px;
+    max-width: 450px;
 }
