--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .NavBar {
     display: flex;
-    background-color:black;
+    background-color:rgb(241, 228, 210);
     min-height: 5vh;
     
 }
@@ -11,7 +11,6 @@
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
-    font-size:15px;
 }
 @media (min-width:768px) {
     .productos {
@@ -21,10 +20,10 @@
 }
 
 .item {
-    padding:15px;
+    padding:20px;
     text-decoration:none;
-    color:white;
-    font-size:15px;
+    color:grey;
+    font-size:20px;
     font-family:'Poppins', sans-serif;
     font-weight: bolder;
     text-align:center;
